[project]
name = "linux-driver-evaluator"
version = "0.1.0"
description = ""
authors = [
    {name = "kavyanegi0007",email = "kavyanegi0007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.5.3,<0.6.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
